Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56158

Crash in StackView::pop()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.1
    • 5.7.0
    • Quick: Controls 2
    • None
    • 5322ad410a78e43a86bb00b9765698c59f9449cb

    Description

      Push a dozen of pages, and repeatedly click the pop -button. Easier to reproduce the faster you click.

      import QtQuick 2.7
      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          id: window
          width: 300
          height: 300
          visible: true
          title: stack.depth
      
          header: ToolBar {
              Row {
                  ToolButton {
                      text: "Push"
                      onClicked: stack.push(page)
                  }
                  ToolButton {
                      text: "Replace"
                      onClicked: stack.replace(page)
                  }
                  ToolButton {
                      text: "Pop"
                      enabled: stack.depth > 1
                      onClicked: stack.pop()
                  }
              }
          }
      
          StackView {
              id: stack
              anchors.fill: parent
              initialItem: Component {
                  id: page
                  Rectangle {
                      border.color: "red"
                      border.width: 2
                  }
              }
          }
      }
      

      Stacktrace:

      #0  0x00007fffe1080816 in QListData::size (this=0x10) at /home/jpnurmi/Projects/qt-57/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:113
      #1  0x00007fffe1082b2c in QList<QQuickStateAction>::count (this=0x10)
          at /home/jpnurmi/Projects/qt-57/qtbase/include/QtCore/../../src/corelib/tools/qlist.h:339
      #2  0x00007fffe1096eb1 in QQuickTransitionManager::cancel (this=0x23b57c0) at util/qquicktransitionmanager.cpp:273
      #3  0x00007fffe12cc20b in QQuickItemViewTransitionableItem::stopTransition (this=0x23c7a10) at items/qquickitemviewtransition.cpp:559
      #4  0x00007fffe12cbe63 in QQuickItemViewTransitionableItem::prepareTransition (this=0x23c7a10, transitioner=0x8f59a0, index=8, viewBounds=...)
          at items/qquickitemviewtransition.cpp:485
      #5  0x00007fffe0eb86ce in QQuickStackElement::prepareTransition (this=0x23c7a10, transitioner=0x8f59a0, viewBounds=...) at qquickstackview_p.cpp:249
      #6  0x00007fffe0eb91ea in QQuickStackViewPrivate::popTransition (this=0x95c800, enter=0x23c7720, exit=0x23c7a10, viewBounds=..., immediate=false)
          at qquickstackview_p.cpp:429
      #7  0x00007fffe0eb49cf in QQuickStackView::pop (this=0x895a70, args=0x7fffffffb2d0) at qquickstackview.cpp:562
      #8  0x00007fffe0edab6e in QQuickStackView::qt_static_metacall (_o=0x895a70, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0x7fffffffb320)
          at .moc/moc_qquickstackview_p.cpp:223
      #9  0x00007fffe0edb2ef in QQuickStackView::qt_metacall (this=0x895a70, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0x7fffffffb320)
          at .moc/moc_qquickstackview_p.cpp:384
      #10 0x00007ffff6da58e1 in QMetaObject::metacall (object=0x895a70, cl=QMetaObject::InvokeMetaMethod, idx=79, argv=0x7fffffffb320)
          at kernel/qmetaobject.cpp:301
      #11 0x00007ffff748be39 in QQmlObjectOrGadget::metacall (this=0x7fffffffb2b0, type=QMetaObject::InvokeMetaMethod, index=79, argv=0x7fffffffb320)
          at qml/qqmlpropertycache.cpp:1541
      #12 0x00007ffff73e0d18 in QV4::QObjectMethod::callInternal (this=0x7fffe15953e0, callData=0x7fffe1595390) at jsruntime/qv4qobjectwrapper.cpp:1855
      #13 0x00007ffff73e080b in QV4::QObjectMethod::call (m=0x7fffe15953e0, callData=0x7fffe1595390) at jsruntime/qv4qobjectwrapper.cpp:1800
      #14 0x00007ffff72932bc in QV4::Object::call (this=0x7fffe15953e0, d=0x7fffe1595390)
          at /home/jpnurmi/Projects/qt-57/qtbase/include/QtQml/5.7.1/QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4object_p.h:332
      #15 0x00007ffff74035f2 in QV4::Runtime::callProperty (engine=0x6bf1a0, nameIndex=37, callData=0x7fffe1595390) at jsruntime/qv4runtime.cpp:1030
      #16 0x00007ffff7fe53e2 in ?? ()
      #17 0x00007fffe1585d70 in ?? ()
      #18 0x00007fffe1585d70 in ?? ()
      #19 0x00007fffe1595368 in ?? ()
      #20 0x4b859d95d9070600 in ?? ()
      #21 0x00007fffffffb4f0 in ?? ()
      #22 0x00007ffff731e8b4 in QV4::FunctionObject::function (this=0x1) at jsruntime/qv4functionobject_p.h:140
      #23 0x00007ffff735e204 in QV4::SimpleScriptFunction::call (that=0x7ffff7fe4150, callData=0x7fffe1595318) at jsruntime/qv4functionobject.cpp:582
      #24 0x00007ffff72932bc in QV4::Object::call (this=0x7ffff7fe4150, d=0x7fffe1595318)
          at /home/jpnurmi/Projects/qt-57/qtbase/include/QtQml/5.7.1/QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4object_p.h:332
      #25 0x00007ffff74b64f2 in QQmlJavaScriptExpression::evaluate (this=0x879880, callData=0x7fffe1595318, isUndefined=0x0)
          at qml/qqmljavascriptexpression.cpp:196
      #26 0x00007ffff7441dac in QQmlBoundSignalExpression::evaluate (this=0x879880, a=0x0) at qml/qqmlboundsignal.cpp:247
      #27 0x00007ffff7442405 in QQmlBoundSignal_callback (e=0x865780, a=0x0) at qml/qqmlboundsignal.cpp:379
      #28 0x00007ffff74921cc in QQmlNotifier::emitNotify (endpoint=0x0, a=0x0) at qml/qqmlnotifier.cpp:100
      #29 0x00007ffff74159c0 in QQmlData::signalEmitted (object=0x85fdf0, index=51, a=0x0) at qml/qqmlengine.cpp:779
      #30 0x00007ffff6de1164 in QMetaObject::activate (sender=0x85fdf0, signalOffset=48, local_signal_index=3, argv=0x0) at kernel/qobject.cpp:3618
      #31 0x00007ffff6de0f98 in QMetaObject::activate (sender=0x85fdf0, m=0x7fffe0f2a000 <QQuickAbstractButton::staticMetaObject>, local_signal_index=3, argv=0x0)
          at kernel/qobject.cpp:3602
      #32 0x00007fffe0ecd721 in QQuickAbstractButton::clicked (this=0x85fdf0) at .moc/moc_qquickabstractbutton_p.cpp:362
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes