src/quicktemplates2/qquickstackview_p_p.h
@@ -80,7 +80,7 @@ public:
 
     void transitionNextReposition(QQuickItemViewTransitioner *transitioner, QQuickItemViewTransitioner::TransitionType type, bool asTarget);
     bool prepareTransition(QQuickItemViewTransitioner *transitioner, const QRectF &viewBounds);
-    void startTransition(QQuickItemViewTransitioner *transitioner);
+    void startTransition(QQuickItemViewTransitioner *transitioner, QQuickStackView::Status status);
 
     void itemDestroyed(QQuickItem *item) override;
 
@@ -128,7 +128,7 @@ public:
     void popTransition(QQuickStackElement *enter, QQuickStackElement *exit, const QRectF &viewBounds, bool immediate);
     void pushTransition(QQuickStackElement *enter, QQuickStackElement *exit, const QRectF &viewBounds, bool immediate);
     void replaceTransition(QQuickStackElement *enter, QQuickStackElement *exit, const QRectF &viewBounds, bool immediate);
-    void completeTransition(QQuickStackElement *element, QQuickTransition *transition);
+    void completeTransition(QQuickStackElement *element, QQuickTransition *transition, QQuickStackView::Status status);
 
     void viewItemTransitionFinished(QQuickItemViewTransitionableItem *item) override;
     void setBusy(bool busy);
